src/objects/MST_Action_Count__c.object
<CustomObject>
    <description>Roll up feature so that we can tell how many field set names have been shown. 
Count of how many times an Ad Hoc survey was used over a timeframe
Last 30, 60, 90 days (if need other duration needs to be defined now)
Lifetime

US592</description>
    <fields>
        <fullName>Date_Triggered__c</fullName>
        <label>Date Triggered</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metadata_Survey_Trigger__c</fullName>
        <label>Metadata Survey Trigger</label>
        <referenceTo>Metadata_Survey_Trigger__c</referenceTo>
        <relationshipLabel>MST Action Counts</relationshipLabel>
        <relationshipName>MST_Action_Counts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Fieldset__c</fullName>
        <formula>Metadata_Survey_Trigger__r.Survey_Fieldset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Object__c</fullName>
        <formula>Metadata_Survey_Trigger__r.Survey_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Object</label>
        <type>Text</type>
    </fields>
    <label>MST Action Count</label>
    <nameField>
        <displayFormat>MSTAC-{000000000}</displayFormat>
        <label>Metadata Survey Trigger Action Count Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MST Action Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>